--- a/client/style.css
+++ b/client/style.css
@@ -24,8 +24,8 @@ body {
 
 #chat_container {
   flex: 1;
-  /*width: 100vw;*/
-  /*height: 100vh;*/
+  width: 100vw;
+  height: 80vh;
   overflow-y: auto;
   display: flex;
   flex-direction: column;
