--- a/client/style.css
+++ b/client/style.css
@@ -20,6 +20,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  overflow: hidden;
 }
 
 #chat_container {
