--- a/client/style.css
+++ b/client/style.css
@@ -20,7 +20,9 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  overflow: hidden;
+  overflow-y: hidden;
+  overflow-x: hidden;
+  position: fixed;
 }
 
 #chat_container {
