--- a/client/style.css
+++ b/client/style.css
@@ -1,5 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@100;300;400;500;700;800;900&display=swap");
 
+body {
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
+}
+html {
+  height: -webkit-fill-available;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -26,15 +34,13 @@ body {
 #chat_container {
   flex: 1;
   width: 100vw;
-  height: 80vh;
+  height: 100vh;
   overflow-y: auto;
   display: flex;
   flex-direction: column;
   gap: 10px;
-
-  /*-ms-overflow-style: none;*/
-  /*scrollbar-width: none;*/
-
+  -ms-overflow-style: none;
+  scrollbar-width: none;
   padding-bottom: 20px;
   scroll-behavior: smooth;
 }
