--- a/client/style.css
+++ b/client/style.css
@@ -1,9 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@100;300;400;500;700;800;900&display=swap");
 
-body {
-  min-height: 100vh;
-  min-height: -webkit-fill-available;
-}
+
 html {
   height: -webkit-fill-available;
 }
@@ -17,6 +14,8 @@ html {
 
 body {
   background: #343541;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
 }
 
 #app {
@@ -27,14 +26,16 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-end;
+  /*justify-content: space-between;*/
 
 }
 
 #chat_container {
   flex: 1;
   width: 100vw;
-  height: 100vh;
+ 
+  /*height: 70%;*/
   overflow-y: auto;
   display: flex;
   flex-direction: column;
@@ -43,6 +44,7 @@ body {
   scrollbar-width: none;
   padding-bottom: 20px;
   scroll-behavior: smooth;
+
 }
 
 /* hides scrollbar */
