--- a/client/style.css
+++ b/client/style.css
@@ -14,8 +14,7 @@ html {
 
 body {
   background: #343541;
-  min-height: 100vh;
-  min-height: -webkit-fill-available;
+
 }
 
 #app {
@@ -26,24 +25,28 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: flex-start;
   /*justify-content: space-between;*/
 
 }
 
 #chat_container {
-  flex: 1;
+  /*flex: 1;*/
   width: 100vw;
- 
-  /*height: 70%;*/
   overflow-y: auto;
   display: flex;
   flex-direction: column;
   gap: 10px;
-  -ms-overflow-style: none;
-  scrollbar-width: none;
   padding-bottom: 20px;
-  scroll-behavior: smooth;
+  margin-bottom: 20px;
+  /*border: 1px solid red;*/
+  /*height: 70%;*/
+
+
+  /*-ms-overflow-style: none;*/
+  /*scrollbar-width: none;*/
+
+  /*scroll-behavior: smooth;*/
 
 }
 
@@ -65,7 +68,6 @@ body {
   width: 100%;
   max-width: 1280px;
   margin: 0 auto;
-
   display: flex;
   flex-direction: row;
   align-items: flex-start;
@@ -111,9 +113,10 @@ body {
 }
 
 form {
+  margin-top:auto;
   width: 100%;
   max-width: 1280px;
-  margin: 0 auto;
+  /*margin: 0 auto;*/
   padding: 10px;
   background: #40414F;
   display: flex;
