--- a/client/style.css
+++ b/client/style.css
@@ -115,7 +115,8 @@ body {
 }
 
 form {
-  margin-top:auto;
+  /*margin-top:auto;*/
+  margin-bottom: 20px;
   width: 100%;
   max-width: 1280px;
   /*margin: 0 auto;*/
