--- a/client/style.css
+++ b/client/style.css
@@ -29,6 +29,7 @@ body {
   align-items: center;
   justify-content: flex-start;
   /*justify-content: space-between;*/
+  overflow: hidden;
 
 }
 
@@ -115,7 +116,7 @@ body {
 }
 
 form {
-  /*margin-top:auto;*/
+  margin-top:auto;
   margin-bottom: 20px;
   width: 100%;
   max-width: 1280px;
