--- a/client/style.css
+++ b/client/style.css
@@ -20,7 +20,7 @@ body {
 }
 
 #app {
-  padding: 20px 20px;
+  padding: 20px 20px 60px 20px;
   width: 100vw;
   height: 100vh;
   background: #343541;
