--- a/client/style.css
+++ b/client/style.css
@@ -19,10 +19,12 @@ body {
 
 }
 
+
 #app {
-  padding: 20px 20px 60px 20px;
+  padding: 20px ;
   width: 100vw;
-  height: 100vh;
+  height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+  height: calc(var(--vh, 1vh) * 100);
   background: #343541;
   display: flex;
   flex-direction: column;
