--- a/client/style.css
+++ b/client/style.css
@@ -84,7 +84,7 @@ body {
   height: 36px;
   border-radius: 5px;
 
-  background: #e8b1b9;
+  background: #eed59b;
 
   display: flex;
   justify-content: center;
